valdo/lbhj.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-bl
spec:
  selector:
    tier: tils
  ports:
    - port: 9909
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
