valdo/promserv.yaml
apiVersion: v1
kind: Service
metadata:
  name: proms-serv
  labels:
    app: porm
spec:
  type: ClusterIP
  selector:
    app: prom
  ports:
  - port: 9090
    targetPort: 9090
