valdo/svcs.yaml
apiVersion: v1
kind: Service
metadata:
  name: pots-service
  labels:
    name: clust-in
    igns: nbjs
spec:
  type: ClusterIP
  selector:
    name: nginx
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
